# hyperion

./: CODE_OF_CONDUCT.md  README.md  docker-compose.yml  pyproject.toml
backend/: .gitignore  artnet.py  pyproject.toml
backend/src/: main.py
backend/src/core/: config.py  database.py  exc.py  startup.py
backend/src/core/security/: access.py
backend/src/models/: accounts.py  fixtures.py  shows.py
backend/src/routers/: accounts.py  dmx.py  fixtures.py  manufacturer.py  show.py
backend/src/schemas/: accounts.py  device_management.py  fixtures.py  manufacturer.py
backend/src/services/: accounts.py  device_management.py  fixture_service.py  fixtures.py  manufacturers.py
src/server/: Dockerfile
