[project]
name = "hyperion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
server = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.126.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
runner = [
    "pyartnet>=2.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
]
